--- a/SportsStore.WebUI/Content/Admin.css
+++ b/SportsStore.WebUI/Content/Admin.css
@@ -7,7 +7,44 @@ TABLE.Grid { border-collapse: collapse; width:100%; }
 TABLE.Grid TH.NumericCol, Table.Grid TD.NumericCol {
     text-align: right; padding-right: 1em; }
 FORM {margin-bottom: 0px;   } 
-DIV.Message { background: gray; color:White; padding: .2em; margin-top:.25em; } 
+
+
+DIV.Message {
+    border: 1px solid;
+    margin: 10px 0px;
+    padding:15px 10px 15px 50px;
+    background-repeat: no-repeat;
+    background-position: 10px center;
+    position:relative;
+    color: #00529B;
+    background-color: #BDE5F8;
+    background-image: url('Images/info-icon.png');
+}
+
+
+div#MessageHolder
+{
+    width: 60%;
+    margin: 0 auto;
+    height: 50px;
+    outline: black solid 1px;
+}
+
+div#MenuBar
+{
+    width: 100%;
+    margin: 0 auto;
+    height: 60px;
+    outline: black solid 1px;
+    background-color: #e5e5e5;
+}
+
+div#MenuIcons
+{
+    
+}
+
+
 
 .field-validation-error { color: red; display: block; }
 .field-validation-valid { display: none; }
