--- a/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
+++ b/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
@@ -1,6 +1,15 @@
 ﻿@model SportsStore.Domain.Entities.Product
 
 <div class="item">
+
+    @if (Model.ImageData != null)
+    { 
+        <div style="float:left; margin-right:20px;">
+            <img width="75" height="75" src="@Url.Action("GetImage", "Product", new { Model.ProductID })" />
+        </div>
+    }
+
+
     <h3>@Model.Name</h3>
     @Model.Description
 
